Fix color contrast of text
By increasing the contrast between foreground and background colors we
help those with low vision impairments and color deficiencies read and
navigate our content.

This change meets WCAG 2.0 AA contrast ratio thresholds and removes 12
violations thrown by [axe-core](https://github.com/dequelabs/axe-core)
when run on the home page.

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -133,7 +133,7 @@
       }
 
       a {
-        color: $light-font-color;
+        color: $base-font-color;
         display: inline-block;
         font-weight: $font-weight-light;
         letter-spacing: 1px;
