--- a/app/assets/stylesheets/pages/_docs.scss
+++ b/app/assets/stylesheets/pages/_docs.scss
@@ -63,7 +63,7 @@
 }
 
 .docs-nav-link {
-  color: $light-font-color;
+  color: $base-font-color;
   display: block;
   padding: $small-spacing 0;
   text-align: right;
