--- a/app/assets/stylesheets/pages/home/_home-languages.scss
+++ b/app/assets/stylesheets/pages/home/_home-languages.scss
@@ -79,7 +79,6 @@
 }
 
 .home-languages-list-item-heading {
-  color: $light-font-color;
   font-size: $font-size-small;
   font-weight: $font-weight-bold;
   letter-spacing: $letter-spacing-large;
